--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "author": "Ben Martin",
   "license": "MIT",
   "private": true,
+  "homepage": "https://bm9k.github.io/link-organiser",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
@@ -14,13 +15,15 @@
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
+    "gh-pages": "^3.2.3",
     "react-scripts": "5.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
